test-change-img-path

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                     <div class="video-js-wrapper">
                                         <video id="video-js" class="video-js vjs-16-9" controls preload="auto"
                                             data-setup="{}">
-                                            <source src="/assets\videos\video12.mp4" type="video/mp4" />
+                                            <source src="/assets/videos/video12.mp4" type="video/mp4" />
                                             <p class="vjs-no-js">
                                                 To view this video please enable JavaScript, and consider upgrading to a
                                                 web browser that
@@ -245,7 +245,7 @@
                                                         <div class="col-4">
                                                             <div class="guide">
                                                                 <div class="thumbnail">
-                                                                    <img src="/assets\img\thumbnail\Rectangle 46.png"
+                                                                    <img src="/assets/img/thumbnail/rec46.png"
                                                                         alt="thumb1">
                                                                 </div>
                                                             </div>
@@ -267,7 +267,7 @@
                                                         <div class="col-4">
                                                             <div class="guide">
                                                                 <div class="thumbnail">
-                                                                    <img src="/assets\img\vid2-s.png" alt="thumb1">
+                                                                    <img src="/assets/img/vid2-s.png" alt="thumb1">
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -287,7 +287,7 @@
                                                         <div class="col-4">
                                                             <div class="guide">
                                                                 <div class="thumbnail">
-                                                                    <img src="/assets\img\thumbnail\Rectangle 46.png"
+                                                                    <img src="/assets/img/thumbnail/rec46.png"
                                                                         alt="thumb1">
                                                                 </div>
                                                             </div>
@@ -591,7 +591,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
@@ -616,7 +616,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
@@ -641,7 +641,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
@@ -666,7 +666,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
@@ -691,7 +691,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
@@ -716,7 +716,7 @@
                                         <a href="/views/blog.html" class="card">
                                             <div class="guide">
                                                 <div class="thumbnail  no-bottom-raduis">
-                                                    <img src="/assets\img\thumbnail\wall.png" alt="thumb1">
+                                                    <img src="/assets/img/thumbnail/wall.png" alt="thumb1">
                                                     <div class="info">
                                                         <div class="d-flex gap-1">
                                                             <i class="icon li-message"></i>
