--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                                                 <button class="btn white mt-xs "
                                                     type="submit">ارسال</button>
                                                 <div class="wave-image">
-                                                    <img src="/assets\img\wave.png" alt="">
+                                                    <img src="/assets/img/wave.png" alt="">
                                                 </div>
                                             </div>
                                         </form>
