recalculate-audio-duration

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                                         <div class="col-4">
                                                             <div class="guide">
                                                                 <div class="thumbnail">
-                                                                    <img src="/assetsimg/vid2-s.png" alt="thumb1">
+                                                                    <img src="/assets/img/vid2-s.png" alt="thumb1">
                                                                 </div>
                                                             </div>
                                                         </div>
